--- a/README.Rmd
+++ b/README.Rmd
@@ -51,6 +51,12 @@ variables:
         -   [`KIDSEX`](%60r%20ipumsr::ipums_website(%22dhs%22,%20launch%20=%20FALSE,%20var%20=%20%22KIDSEX%22)%60)
         -   [`KIDDOBCMC`](%60r%20ipumsr::ipums_website(%22dhs%22,%20launch%20=%20FALSE,%20var%20=%20%22KIDDOBCMC%22)%60)
         -   [`BIRTHWTREF`](%60r%20ipumsr::ipums_website(%22dhs%22,%20launch%20=%20FALSE,%20var%20=%20%22BIRTHWTREF%22)%60)
+        -   [`FLOOR`](`r ipumsr::ipums_website("dhs", launch = FALSE, var = "FLOOR")`)
+        -   [`TOILETTYPE`](`r ipumsr::ipums_website("dhs", launch = FALSE, var = "TOILETTYPE")`)
+        -   [`DRINKWTR`](`r ipumsr::ipums_website("dhs", launch = FALSE, var = "DRINKWTR")`)
+        -   [`HWHAZWHO`](`r ipumsr::ipums_website("dhs", launch = FALSE, var = "HWHAZWHO")`)
+        -   [`FEVRECENT`](`r ipumsr::ipums_website("dhs", launch = FALSE, var = "FEVRECENT")`)
+        -   [`DIARRECENT`](`r ipumsr::ipums_website("dhs", launch = FALSE, var = "DIARRECENT")`)
 2. Submit your extract request through the IPUMS DHS interface.
 2. When the it has finished processing, [download](https://tech.popdata.org/dhs-research-hub/posts/2024-02-02-download-dhs-data/#download-data)
 the completed data extract.
