--- a/README.Rmd
+++ b/README.Rmd
@@ -46,11 +46,11 @@ instructions on building an IPUMS DHS data extract.
 variables:
     -   **Sample:** Kenya 2014 :kenya:
     -   **Variables:** (CONFIRM)
-        -   [`BIRTHWT`](%60r%20ipumsr::ipums_website(%22dhs%22,%20launch%20=%20FALSE,%20var%20=%20%22BIRTHWT%22)%60)
-        -   [`HEIGHTFEM`](%60r%20ipumsr::ipums_website(%22dhs%22,%20launch%20=%20FALSE,%20var%20=%20%22HEIGHTFEM%22)%60)
-        -   [`KIDSEX`](%60r%20ipumsr::ipums_website(%22dhs%22,%20launch%20=%20FALSE,%20var%20=%20%22KIDSEX%22)%60)
-        -   [`KIDDOBCMC`](%60r%20ipumsr::ipums_website(%22dhs%22,%20launch%20=%20FALSE,%20var%20=%20%22KIDDOBCMC%22)%60)
-        -   [`BIRTHWTREF`](%60r%20ipumsr::ipums_website(%22dhs%22,%20launch%20=%20FALSE,%20var%20=%20%22BIRTHWTREF%22)%60)
+        -   [`BIRTHWT`](`r ipumsr::ipums_website("dhs", launch = FALSE, var = "BIRTHWT")`)
+        -   [`HEIGHTFEM`](`r ipumsr::ipums_website("dhs", launch = FALSE, var = "HEIGHTFEM")`)
+        -   [`KIDSEX`](`r ipumsr::ipums_website("dhs", launch = FALSE, var = "KIDSEX")`)
+        -   [`KIDDOBCMC`](`r ipumsr::ipums_website("dhs", launch = FALSE, var = "KIDDOBCMC")`)
+        -   [`BIRTHWTREF`](`r ipumsr::ipums_website("dhs", launch = FALSE, var = "BIRTHWTREF")`)
         -   [`FLOOR`](`r ipumsr::ipums_website("dhs", launch = FALSE, var = "FLOOR")`)
         -   [`TOILETTYPE`](`r ipumsr::ipums_website("dhs", launch = FALSE, var = "TOILETTYPE")`)
         -   [`DRINKWTR`](`r ipumsr::ipums_website("dhs", launch = FALSE, var = "DRINKWTR")`)
